Fix IE11 issues with the Checkout block (https://github.com/woocommerce/woocommerce-blocks/pull/1941)
* Refactor useShippingRates so it doesn't use Object.fromEntries

* Refactor Checkout form CSS so it doesn't use grid autopositioning

* Fix Payment Methods title occupying too much space in IE11

* Fix payment methods tab icons not centered in IE11

--- a/plugins/woocommerce-blocks/assets/js/base/components/payment-methods/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/base/components/payment-methods/style.scss
@@ -12,9 +12,10 @@
 		margin-top: -24px;
 		margin-left: $gap-small;
 		margin-bottom: $gap-small;
-		width: fit-content;
 		color: $black;
 		font-weight: bold;
+		display: inline-block;
+		vertical-align: middle;
 	}
 
 	.wc-block-component-express-checkout__content {
